# walltch

./: .gitignore  Cargo.toml  README.md  biome.json  components.json  index.html  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
crates/walltch-core/: Cargo.toml
crates/walltch-core/src/: lib.rs
crates/walltch-core/src/addon/: client.rs  manifest.rs  meta.rs  mod.rs  pick.rs  response.rs  stream.rs  subtitle.rs
crates/walltch-core/src/ports/: clock.rs  http.rs  mod.rs  storage.rs
crates/walltch-core/src/skip/: mod.rs
crates/walltch-core/src/social/: friends.rs  mod.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/adapters/: clock.rs  http.rs  mod.rs  ram_storage.rs  skip.rs  social.rs  social_supabase.rs  storage.rs  supabase.rs  torrent.rs
src-tauri/src/commands/: mod.rs
src/app/: Layout.tsx
src/components/: Avatar.tsx  ContinueCard.tsx  FriendRail.tsx  WindowControls.tsx
src/components/ui/: animated-background.tsx  dropdown-menu.tsx
src/features/addons/: AddonsPage.tsx  addons.css
src/features/auth/: AuthScreen.tsx  Gate.tsx  GoogleMark.tsx  ProfileSetup.tsx  auth.css
src/features/detail/: DetailPage.tsx  StreamsSection.tsx  detail.css
src/features/discover/: CatalogPage.tsx  CatalogRow.tsx  ContinueRow.tsx  DiscoverPage.tsx  FeaturedBillboard.tsx  FriendRail.tsx  TrendingRail.tsx  TypeBoardPage.tsx  discover.css
src/features/downloads/: DownloadsPage.tsx  downloads.css
src/features/player/: PlayerPage.tsx  player.css
src/features/profile/: AuthCard.tsx  ProfilePage.tsx  profile.css
src/features/search/: SearchPage.tsx  SearchResults.tsx  search.css
src/features/settings/: SettingsPage.tsx  settings.css
src/lib/: api.ts  auth.tsx  avatar.ts  lang.ts  profile.tsx  theme.ts  utils.ts
src/lib/bindings/: ActivityInput.ts  AddonFailure.ts  AddonStream.ts  AddonSubtitle.ts  AuthStatus.ts  CacheMode.ts  CatalogDescriptor.ts  DownloadEntry.ts  ExtraProp.ts  Friend.ts  FriendActivity.ts  InstalledAddon.ts  LibraryItem.ts  Manifest.ts  ManifestBehaviorHints.ts  ManifestCatalog.ts  MetaBehaviorHints.ts  MetaDetail.ts  MetaPreview.ts  Profile.ts  (+20 more)
src/styles/: global.css
