[package]
name = "walltch"
description = "Walltch desktop app — addon-based media client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "walltch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
walltch-core = { path = "../crates/walltch-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
reqwest = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
ts-rs = { version = "12", features = ["serde-compat"] }
# tracing-subscriber-utils is required by http-api's logging handler;
# without it librqbit 8.1 doesn't compile.
librqbit = { version = "8", features = ["http-api", "tracing-subscriber-utils"] }
anyhow = "1.0.103"
percent-encoding = "2"
tauri-plugin-libmpv = "0.3.2"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "rt", "macros"] }

