[package]
name = "walltch-core"
description = "Platform-agnostic domain logic for Walltch"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
futures = "0.3"
